# vuln-lsp

./: .gitignore  Cargo.toml  LICENSE  README.md  tatus
.github/workflows/: rust.yml
clients/intellij/: CHANGELOG.md  README.md  gradle.properties  settings.gradle.kts
clients/intellij/.run/: Run Plugin.run.xml
clients/intellij/src/main/kotlin/com/github/doddi/iq-lsp/: MyBundle.kt
clients/intellij/src/main/kotlin/com/github/doddi/iq-lsp/listeners/: MyApplicationActivationListener.kt
clients/intellij/src/main/kotlin/com/github/doddi/iq-lsp/lsp/: IqLspServerDescriptor.kt  IqLspServerSupportProvider.kt
clients/intellij/src/main/kotlin/com/github/doddi/iq-lsp/services/: MyProjectService.kt
clients/intellij/src/main/kotlin/com/github/doddi/iq-lsp/toolWindow/: MyToolWindowFactory.kt
clients/intellij/src/main/kotlin/com/github/doddi/vulnlsp/: MyBundle.kt
clients/intellij/src/main/kotlin/com/github/doddi/vulnlsp/listeners/: MyApplicationActivationListener.kt
clients/intellij/src/main/kotlin/com/github/doddi/vulnlsp/lsp/: VulnLspServerDescriptor.kt  VulnLspServerSupportProvider.kt
clients/intellij/src/main/kotlin/com/github/doddi/vulnlsp/services/: MyProjectService.kt
clients/intellij/src/main/kotlin/com/github/doddi/vulnlsp/toolWindow/: MyToolWindowFactory.kt
clients/intellij/src/test/kotlin/com/github/doddi/anathema/: MyPluginTest.kt
clients/vscode/: extension.js  package-lock.json  package.json
resources/cargo/: output.json
resources/maven/: dep_tree.txt  pom.xml  pom_without_version.xml  tree_response.txt
src/: lib.rs  logging.rs  main.rs
src/common/: document_store.rs  errors.rs  mod.rs  purl.rs  purl_range.rs  range.rs
src/logging/: logging_file.rs  logging_otel.rs  mod.rs
src/lsp/: completion.rs  diagnostics.rs  document_store.rs  hover.rs  language_server.rs  middleware.rs  mod.rs  progress.rs
src/parsers/: common.rs  mod.rs  project.rs
src/parsers/cargo/: build_command.rs  metadata.rs  mod.rs  toml.rs
src/parsers/maven/: dep_tree.rs  mod.rs  pom.rs
src/parsers/pom/: dep_tree_cmd.rs  mod.rs  parser.rs
src/pom/: parser.rs
src/server/: cacher.rs  mod.rs  purl.rs
src/server/dummy/: mod.rs
src/server/ossindex/: mod.rs
src/server/sonatype/: mod.rs
src/vulnerability_server/: mod.rs
