[package]
name = "vuln-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.34.0", features = [
  "rt-multi-thread",
  "macros",
  "io-std",
] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.108"
anyhow = { version = "1.0.75", features = ["default"] }
futures = "0.3.29"
async-trait = "0.1.74"
reqwest = { version = "0.12.7", features = ["json"] }
rand = "0.8.5"
clap = { version = "4.4.11", features = ["derive", "cargo"] }
thiserror = "1.0.50"
toml = "0.8.8"
cargo_toml = "0.20.4"

tonic = { version = "0.12.2", features = ["tls", "tls-roots"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
opentelemetry = "=0.25.0"
opentelemetry-otlp = { version = "=0.25.0", features = [
  "reqwest-client",
  "reqwest-rustls",
  "http-proto",
  "tls",
] }
tracing = "0.1"
tracing-opentelemetry = "=0.26.0"
opentelemetry_sdk = { version = "=0.25.0" }
# opentelemetry_sdk = { version = "=0.25.0", features = ["rt-tokio"] }
