[package]
name = "vuln-lsp"
version = "0.1.0"
edition = "2021"

[features]
default = []
logging = []
logging-file = ["logging"]
logging-otel = [
  "logging",
  "dep:opentelemetry",
  "dep:opentelemetry-appender-tracing",
  "dep:opentelemetry-http",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry-semantic-conventions",
  "dep:opentelemetry_sdk",
]

[dependencies]
tokio = { version = "1.34.0", features = [
  "rt-multi-thread",
  "macros",
  "io-std",
] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
serde = { version = "1.0.193", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.108"
anyhow = { version = "1.0.75", features = ["default"] }
futures = "0.3.29"
async-trait = "0.1.74"
reqwest = { version = "0.12.7", features = ["json"] }
rand = "0.8.5"
clap = { version = "4.4.11", features = ["derive", "cargo"] }
thiserror = "1.0.50"
toml = "0.8.8"
cargo_toml = "0.20.4"

tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
tracing = "0.1.9"
tracing-opentelemetry = "=0.26.0"

opentelemetry = { version = "=0.25.0", optional = true }
opentelemetry-appender-tracing = { version = "=0.25.0", optional = true }
opentelemetry-http = { version = "=0.25.0", optional = true }
opentelemetry-otlp = { version = "=0.25.0", features = [
  "tonic",
  "http-proto",
  "logs",
  "reqwest-client",
], optional = true }
opentelemetry-semantic-conventions = { version = "=0.25.0", optional = true }
opentelemetry_sdk = { version = "=0.25.0", features = [
  "rt-tokio",
  "logs",
], optional = true }
